--- a/reads.html
+++ b/reads.html
@@ -592,7 +592,7 @@ ANTGATTTTAAAAAGCAGTCCAATGACACCAATATCTACGGATGCTTGTAGAACA
           </p>
 
           <figure>
-            <img src="img/ascii-table.png" alt="ASCII table with decimal codes and characters." />
+            <img src="ascii-table.png" alt="ASCII table with decimal codes and characters." />
             <figcaption>
               Figure 2.1 – ASCII table. FASTQ quality characters are built by taking the Phred
               score, adding 33, and using that as the ASCII code.
