--- a/workshop.html
+++ b/workshop.html
@@ -627,7 +627,7 @@ You can catch problems before you use the data in later analyses.
 
   <p>Now copy the workshop data directory into your home directory:</p>
 
-  <div class="code-block-green">cp -r instructor_materials/Gregg_Thomas/congen-assembly/ .</div>
+  <div class="code-block-green">cp -r instructor_materials/Ellie_Armstrong/congen-assembly-2025/ .</div>
 
   <table>
     <thead>
@@ -643,7 +643,7 @@ You can catch problems before you use the data in later analyses.
 
   <p>Change into the new directory:</p>
 
-  <div class="code-block-green">cd congen-assembly</div>
+  <div class="code-block-green">cd congen-assembly-2025</div>
 
   <table>
     <thead>
@@ -651,7 +651,7 @@ You can catch problems before you use the data in later analyses.
     </thead>
     <tbody>
       <tr><td><code>cd</code></td><td>Change directory.</td></tr>
-      <tr><td><code>congen-assembly</code></td><td>Workshop directory.</td></tr>
+      <tr><td><code>congen-assembly-2025</code></td><td>Workshop directory.</td></tr>
     </tbody>
   </table>
 
@@ -675,10 +675,9 @@ You can catch problems before you use the data in later analyses.
       <tr><th>Folder</th><th>Description</th></tr>
     </thead>
     <tbody>
-      <tr><td><code>dmel-3R-reference/</code></td><td>Reference sequence for comparison.</td></tr>
-      <tr><td><code>dpse-chr2-reads/</code></td><td>Example short-read data.</td></tr>
+      <tr><td><code>T_deckeni_reads/</code></td><td>Reference sequence for comparison.</td></tr>
+      <tr><td><code>T_deckeni_reference/</code></td><td>Example short-read data.</td></tr>
       <tr><td><code>expected-outputs/</code></td><td>Precomputed workshop outputs.</td></tr>
-      <tr><td><code>scripts/</code></td><td>Helper scripts.</td></tr>
     </tbody>
   </table>
 
@@ -694,7 +693,7 @@ You can catch problems before you use the data in later analyses.
     stays organized during the assembly and mapping workflow.
   </p>
 
-  <div class="code-block-green">mkdir alignments</div>
+  <div class="code-block-green">mkdir quality-control</div>
 
   <table>
     <thead>
@@ -702,7 +701,7 @@ You can catch problems before you use the data in later analyses.
     </thead>
     <tbody>
       <tr><td><code>mkdir</code></td><td>Create a new directory.</td></tr>
-      <tr><td><code>alignments</code></td><td>Where alignment files will go.</td></tr>
+      <tr><td><code>quality-control</code></td><td>Where our genome assembly quality evaluations will go.</td></tr>
     </tbody>
   </table>
 
