--- a/intro.html
+++ b/intro.html
@@ -179,7 +179,7 @@
       <p>
         This page introduces the structure and flow of the genome assembly module
         for ConGen2025. Use the navigation tabs above to move between sections. This workshop
-        was originally primarily developed by <a href="https://gwct.bio/" target="_blank">Gregg Thomas</a>. 
+        was originally developed in collaboration with <a href="https://gwct.bio/" target="_blank">Gregg Thomas</a> (especially the web interface--thank you, Gregg!). 
         Previous versions of the workshop can be found under the 
         <a href="https://ellieearmstrong.github.io/congen_2025/links.html" target="_blank">Links</a> tab.
       </p>
