--- a/reads.html
+++ b/reads.html
@@ -617,7 +617,7 @@ ANTGATTTTAAAAAGCAGTCCAATGACACCAATATCTACGGATGCTTGTAGAACA
           </p>
 
           <p>
-            For Q = 56, this gives an error probability of about 0.0000025(roughly 1 in
+            For Q = 56, this gives an error probability of about 0.0000025 (roughly 1 in
             500,000). Most Illumina short-read data nowadays has fairly high read quality,
             but this is not the case for older sequencing platforms and can also differ for
             historic or environmental datasets.
@@ -724,7 +724,7 @@ fastqc read_files/illumina/SRR31758803-chr1_1.fastq.gz \
           </p>
 
           <figure>
-            <img src="img/fastqc-2.png" alt="Example FastQC per-base quality plot for good reads." />
+            <img src="good_illumina.png" alt="Example FastQC per-base quality plot for good reads." />
             <figcaption>
               Figure 2.4 – Per-base sequence quality for the example reads. Quality is very
               high at the start of reads with a modest decline toward the end.
@@ -744,7 +744,7 @@ fastqc read_files/illumina/SRR31758803-chr1_1.fastq.gz \
           </p>
 
           <figure>
-            <img src="img/fastqc-3.png" alt="Example FastQC per-base quality plot for poor reads." />
+            <img src="bad_illumina.png" alt="Example FastQC per-base quality plot for poor reads." />
             <figcaption>
               Figure 2.5 – Example of poor per-base read quality from the FastQC
               documentation. Many positions have low scores and would merit trimming or
