--- a/reads.html
+++ b/reads.html
@@ -684,7 +684,7 @@ fastqc read_files/illumina/SRR31758803-chr1_1.fastq.gz \
           </p>
 
           <figure>
-            <img src="img/fastqc-screenshot.png" alt="Screenshot of RStudio interface showing FastQC HTML output files in the file browser." />
+            <img src="placeholder.png" alt="Screenshot of RStudio interface showing FastQC HTML output files in the file browser." />
             <figcaption>
               Figure 2.2 – Viewing FastQC HTML output files in the RStudio Server file
               browser.
@@ -704,10 +704,9 @@ fastqc read_files/illumina/SRR31758803-chr1_1.fastq.gz \
           </p>
 
           <figure>
-            <img src="img/fastqc-1.png" alt="FastQC basic statistics table." />
+            <img src="Fig2.3FASTQ.png" alt="FastQC basic statistics table." />
             <figcaption>
-              Figure 2.3 – Basic summary statistics produced by FastQC for the first read
-              file.
+              Figure 2.3 – Basic summary statistics produced by FastQC from SRR31758803-chr2_1.fastq.gz.
             </figcaption>
           </figure>
 
@@ -723,16 +722,16 @@ fastqc read_files/illumina/SRR31758803-chr1_1.fastq.gz \
           </p>
 
           <figure>
-            <img src="good_illumina.png" alt="Example FastQC per-base quality plot for good reads." />
+            <img src="Fig2.4FASTQ.png" alt="Example FastQC per-base quality plot for good reads." />
             <figcaption>
-              Figure 2.4 – Per-base sequence quality for the example reads. Quality is very
-              high at the start of reads with a modest decline toward the end.
+              Figure 2.4 – Distribution of the Phred quality scores based on position in read 
+              in SRR31758803-chr2_1.fastq.gz.
             </figcaption>
           </figure>
 
           <p>
             Here, the median quality (the red line) hovers near Q40 for most positions,
-            with a gentle drop at the tail. This kind of pattern is typical for Illumina
+            with a slight drop at the tail. This kind of pattern is typical for Illumina
             data and is more than adequate for most genome assembly tasks.
           </p>
 
