--- a/reads.html
+++ b/reads.html
@@ -769,7 +769,7 @@ fastqc read_files/illumina/SRR31758803-chr2_1.fastq.gz \
             In these workshop exercises, we’ll mainly rely on the mapping and assembly
             software to handle low-quality positions and adapter trimming, and we’ll
             explicitly mark duplicate reads later in the mapping section. For now, the key
-            takeaway is how to quickly sanity-check your hornbill reads with FastQC and
+            takeaway is how to quickly sanity-check sequence reads with FastQC and
             recognize what “good” data look like.
           </p>
         </section>
